# mini-devops-project

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  app.cpp  code_documentation.md  index.html  jenkinsfile  readme.md  tes_app.cpp  test_app.cpp
